# ITMO-cpp-advanced-y2019-20

./: .gitignore  README.md
bimap/: CMakeLists.txt  README.md  bimap.h  main.cpp
bimap/src/: bimap.h
bimap/test/: main.cpp
function/: CMakeLists.txt  README.md
function/src/: function.h
function/test/: tests.cpp
optional/: CMakeLists.txt  README.md  optional.h
optional/src/: optional.h
optional/test/: optional_testing.cpp  test_object.cpp  test_object.h
shared_ptr/: CMakeLists.txt  README.md  shared_ptr.h
shared_ptr/src/: shared_ptr.cpp  shared_ptr.h
shared_ptr/test/: main.cpp  test_object.cpp  test_object.h
signal/: CMakeLists.txt  README.md
signal/src/: intrusive_list.cpp  intrusive_list.h  signals.h
signal/test/: signals_testing.cpp
variant/: CMakeLists.txt  README.md  enable_special_members.h  variant.h  variant_features.h  variant_visitor.h
variant/src/: enable_special_members.h  variant.h  variant_features.h  variant_visitor.h
variant/test/: main.cpp  test-classes.h
